--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,18 @@ dependencies:
   dots_indicator: ^3.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  shared_preferences: ^2.2.2
   cupertino_icons: ^1.0.8
   animate_do: ^3.3.4
   country_picker: ^2.0.27
   country_list_pick: ^1.0.1+6
+  flutter_staggered_grid_view: ^0.7.0
+  get_storage: ^2.1.1
+  google_fonts: ^6.2.1
+  gap: ^3.0.1
+  # octo_image: ^1.0.0
+  # cached_network_image: ^3.2.3
+  
 
 dev_dependencies:
   flutter_test:
