--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   get_storage: ^2.1.1
   google_fonts: ^6.2.1
   gap: ^3.0.1
+  carousel_slider: ^5.0.0
   # octo_image: ^1.0.0
   # cached_network_image: ^3.2.3
   
